# fw_sauna32

./: .cproject  .gitignore  .project  README.md
entropy/: .cproject  .project  CMakeLists.txt  entropy_partition.csv  important links.txt  partitions_example.csv  sdkconfig  sdkconfig.old
entropy/components/tft/: tft.c
entropy/inc/: IEEE11073float.h  MLX90614_API.h  MLX90614_SMBus_Driver.h  MessageQueue.h  ble_manager.h  buzzer.h  custom_list.h  display_driver.h  heartBeat.h  hmi_controller.h  led.h  sensor_filter.h  sensor_manager.h  temp_driver.h
entropy/main/: CMakeLists.txt  IEEE11073float.c  MLX90614_API.c  MLX90614_SMBus_Driver.c  MessageQueue.c  app.c  ble_manager.c  buzzer.c  custom_list.c  custom_list_iterator.c  custom_list_node.c  display_driver.c  heartBeat.c  hmi_controller.c  led.c  sensor_filter.c  sensor_manager.c  temp_driver.c
